[gd_scene load_steps=10 format=2]

[ext_resource path="res://escenes/enemics/enemics.tscn" type="PackedScene" id=1]
[ext_resource path="res://escenes/enemics/tanc3.gd" type="Script" id=2]
[ext_resource path="res://escenes/enemics/bala_tanc3.tscn" type="PackedScene" id=3]
[ext_resource path="res://escenes/caixes de bales.tscn" type="PackedScene" id=4]
[ext_resource path="res://imatges/tancs enemics/tanc3.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 41.4735, 41.8297 )

[sub_resource type="CircleShape2D" id=2]
radius = 231.381

[sub_resource type="CircleShape2D" id=3]
radius = 86.0775

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 59.1961, 60.1867 )

[node name="tanc3" instance=ExtResource( 1 )]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
velocitat = 75
velocitat_rotacio = 4.0
bala_tanc = ExtResource( 3 )
caixa_bales = ExtResource( 4 )

[node name="cos" parent="." index="1"]
texture = ExtResource( 6 )
region_rect = Rect2( 691, 262, 81, 83 )

[node name="CollisionShape2D" parent="." index="2"]
visible = false
shape = SubResource( 1 )

[node name="cano" parent="." index="3"]
position = Vector2( -434.032, -76.4418 )
offset = Vector2( 480, 55.246 )
region_rect = Rect2( 200, 61, 71, 27 )

[node name="boquilla" parent="cano" index="0"]
position = Vector2( 518.583, 59.9163 )

[node name="Visio" type="Area2D" parent="." index="4"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visio" index="0"]
shape = SubResource( 2 )

[node name="area_xoc" type="Area2D" parent="." index="5"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_xoc" index="0"]
shape = SubResource( 3 )

[node name="area_cos" type="Area2D" parent="." index="6"]
collision_layer = 4
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_cos" index="0"]
visible = false
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="." index="7"]
wait_time = 2.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="8"]

[node name="boquilla1" type="Position2D" parent="." index="9"]
position = Vector2( 35, -15 )

[node name="boquilla2" type="Position2D" parent="." index="10"]
position = Vector2( 35, 15 )
[connection signal="body_entered" from="Visio" to="." method="_on_Visio_body_entered"]
[connection signal="body_exited" from="Visio" to="." method="_on_Visio_body_exited"]
[connection signal="area_entered" from="area_xoc" to="." method="_on_area_xoc_area_entered"]
[connection signal="area_exited" from="area_xoc" to="." method="_on_area_xoc_area_exited"]
[connection signal="area_entered" from="area_cos" to="." method="_on_area_cos_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
